--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "ts-node-dev --transpile-only --ignore-watch node_modul src/server.ts"
+    "start": "ts-node-dev -r tsconfig-paths/register --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts"
   },
   "dependencies": {
+    "dotenv-safe": "^8.2.0",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.2",
     "helmet": "^4.3.1"
   },
   "devDependencies": {
+    "@types/dotenv-safe": "^8.1.1",
     "@types/express": "^4.17.9",
     "@types/express-http-proxy": "^1.6.1",
     "@types/helmet": "^4.0.0",
     "ts-node-dev": "^1.1.1",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
   }
 }
